<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- activity titles -->
	<string name="app_name">Animal Tag Scanner</string>
	<string name="export_chooser">Select session log to export</string>

	<!-- main activity actions -->
	<string name="action_settings">Settings</string>
	<string name="action_share">Share / export</string>
	<string name="info_scanner_detached">Tag scanner: detached</string>
	<string name="info_scanner_attached">Tag scanner attached: %1$s; %2$d; %3$d; %4$d; %5$d; %6$s</string>
	<string name="info_scanner_attached_manual_entry_disabled">Disabling manual entry mode - tag scanner detected: %1$s; %2$d; %3$d; %4$d; %5$d; %6$s</string>
	<string name="scanner_connection_error">Error: unable to connect to scanner</string>
	<string name="scanner_start_error">Error: unable to start scanner. Is it connected?</string>
	<string name="file_save_error">Error: unable to save to file %1$s</string>
	<string name="confirm_exit_title">End session?</string>
	<string name="confirm_exit_message">Are you sure you want to end the current session?\n\nSession data will be saved for later export as %1$s</string>
	<string name="confirm_exit_yes">End session</string>
	<string name="confirm_exit_no">Resume session</string>
	<string name="session_history_empty">No sessions found</string>

	<!-- tag editing -->
	<string name="previous_tag_record">Tag scanned previously at: %1$s</string>
	<string name="manual_entry_empty">Please enter a tag number for the current animal before adding another</string>
	<string name="weight_entry_parse_error">Error: please make sure you enter a numeric value for the animal\'s weight</string>
	<string name="export_session_log">"Export session log"</string>
	<string name="label_session_entries">Session entries:</string>
	<string name="empty_session_hint">Add any session details above,\nthen press the button below to start scanning</string>

	<string name="label_session_purpose">Session purpose:</string>
	<string name="hint_session_purpose">What is this session for?</string>
	<string name="label_session_checking_tasks">Checking:</string>
	<string name="label_feet">Feet</string>
	<string name="label_teeth">Teeth</string>
	<string name="label_udder">Udder</string>
	<string name="label_weight">Weight</string>
	<string name="label_session_recording_tasks">Recording:</string>
	<string name="label_dose">Dose</string>
	<string name="hint_dose">What is being given?</string>

	<string name="label_scan_tag">Scan tag</string>
	<string name="label_tag_id">Tag ID:</string>
	<string name="label_take_photo">Take a photo of this tagged animal</string>
	<string name="label_tag_instructions">Un-tick to indicate an issue; record details in the comments field below:</string>
	<string name="hint_weight">Enter the animal\'s weight</string>
	<string name="hint_comments">Enter any comments or observations</string>

	<string name="photo_error">Error: unable to take a photo. Please grant permissions when requested</string>
	<string name="additional_data_tag_missing">Please enter a tag number before looking up additional information</string>
	<string name="additional_data_tag">Tag: %1$s</string>
	<string name="additional_data_empty">No additional data found for this animal</string>
	<string name="additional_data_content">Additional information about this animal</string>
	<string name="additional_data_name">Name:</string>
	<string name="additional_data_mother">Mother:</string>
	<string name="additional_data_father">Father:</string>
	<string name="additional_data_weight">Weight (kg):</string>
	<string name="additional_data_comments">Comments:</string>
	<string name="done">Done</string>

	<!-- settings dialog -->
	<string name="label_scanner_settings">Scanner settings</string>
	<string name="label_operator">Operator:</string>
	<string name="hint_operator">Who is using this scanner?</string>
	<string name="label_manual_entry">Manual tag entry mode</string>
	<string name="label_continuous_scanning">Continuous scanning mode</string>
	<string name="label_imported_data">Imported data</string>
	<string name="label_display_automatically">Display automatically</string>
	<string name="button_import">Import</string>
	<string name="button_export">Export</string>
	<string name="import_success">Successfully imported %1$d records</string>
	<string name="import_error">Error: failed to import records</string>
	<string name="import_file_error">Error: unable to launch file browser. Please report this issue.</string>

	<!-- export browser -->
	<string name="export_browser_error">Error: unable to open export directory – please try again</string>
	<string name="export_session_title">Select a session to export</string>
	<string name="export_current_session">Current session</string>
	<string name="menu_cancel">Cancel</string>
</resources>
